[Fix] person.component: show collapsed tags

--- a/static/prototype/src/style/vis-people.scss
+++ b/static/prototype/src/style/vis-people.scss
@@ -1,5 +1,4 @@
 .person-div {
-  position: relative;
   height: 100%;
   overflow-y: auto;
   overflow-x: hidden;
